--- a/style.css
+++ b/style.css
@@ -23,4 +23,59 @@
     width: 200px; height: 300px;
     border-style: solid;
     margin-left: 20px;
+    background-color:bac ;
   }
+  .trungbay{
+    width: 250px;
+    height: 450px;
+    background-color: white;
+    margin-left: 20px;
+    margin-top: 20px;
+    border-radius:  20px;
+    float: left;
+
+  }
+  .img-ip
+  {
+    width:200px;
+    height: 300px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  .mua
+  {
+    background-color: #04AA6D;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-left: 10px;
+  }
+  .gia
+  {
+    color:aliceblue;
+    text-align: center;
+    font-style: italic;
+    font-family:'Times New Roman', Times, serif;
+  }
+  .khuyenmai
+  {
+    background-color: red;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top : 30px
+    
+  }
+  .tonkho
+  {
+    color:blue;
+  }
+ 
