--- a/style.css
+++ b/style.css
@@ -1,81 +1,38 @@
-.dangnhap {
-    background-color: #04AA6D; /* Green */
-    border: none;
-    color: white;
-    padding: 10px 20px;
+.menu {
+    background-color: bisque;
     text-align: center;
-    text-decoration: none;
+    width: 150px;
+    height: 100px;
+    padding: 10px;
     display: inline-block;
-    font-size: 16px;
-  }
-  .dangki {
-    background-color: yellow; /* Green */
-    border: none;
-    color: black;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
-  .dienthoai
-  {
-    width: 200px; height: 300px;
-    border-style: solid;
-    margin-left: 20px;
-    background-color:bac ;
-  }
-  .trungbay{
-    width: 250px;
-    height: 450px;
-    background-color: white;
-    margin-left: 20px;
-    margin-top: 20px;
-    border-radius:  20px;
+    border-radius: 20px;
     float: left;
+}
 
-  }
-  .img-ip
-  {
-    width:200px;
-    height: 300px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-  }
-  .mua
-  {
-    background-color: #04AA6D;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
+.menu:hover {
+    background-color: rgb(13, 162, 221);
+    color: rgb(0, 255, 13);
+}
+
+.sanpham {
+    width: 1000px;
+    height: auto;
+    background-color: rgb(233, 196, 248);
+    border-radius: 20px;
+    float: left;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    margin-left: 10px;
-  }
-  .gia
-  {
-    color:aliceblue;
+}
+
+.hangmoi {
+    margin-left: 20px;
+    width: 300px;
+    height: auto;
+    background-color: rgb(233, 196, 248);
+    border-radius: 20px;
+    float: left;
+    display: inline-block;
+}
+
+.tieude {
     text-align: center;
-    font-style: italic;
-    font-family:'Times New Roman', Times, serif;
-  }
-  .khuyenmai
-  {
-    background-color: red;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top : 30px
-    
-  }
-  .tonkho
-  {
-    color:blue;
-  }
- 
+}
